checkpoint: SuaviPortal Devam - Admin auth, menu, force password change, API handler

--- a/IzmPortal/IzmPortal.Admin/Views/MenuDocuments/Index.cshtml
+++ b/IzmPortal/IzmPortal.Admin/Views/MenuDocuments/Index.cshtml
@@ -28,7 +28,7 @@
             <tr>
                 <td>@d.Title</td>
                 <td>
-                    <a href="@d.FilePath" target="_blank">
+                    <a href="@d.FileUrl" target="_blank">
                         PDF Aç
                     </a>
                 </td>
